--- a/client/src/components/layout/About.module.css
+++ b/client/src/components/layout/About.module.css
@@ -12,6 +12,7 @@
 }
 
 .container {
+  color:rgb(50, 50, 50);
   display: flex;
   flex-direction: column;
   margin-top: 15px;
@@ -103,4 +104,5 @@
   margin-top: 5px;
   display: flex;
   text-align: center;
+  font-size:0.8em;
 }
