--- a/client/src/components/auth/Login.module.css
+++ b/client/src/components/auth/Login.module.css
@@ -7,8 +7,7 @@
   gap: 1.5em;
   height: 100vh;
   background-color: white;
-  width:100%;
-
+  width: 100%;
 }
 
 .container {
@@ -16,15 +15,13 @@
   width: 40vw;
 }
 
-
-
 .welcome_container {
   font-size: 120px;
   line-height: 160px;
   z-index: 9;
   margin: 2em 1.5em 2.6em 1em;
   color: rgb(192, 169, 255);
-  text-shadow: 5px 5px rgb(254, 241, 194) ;
+  text-shadow: 5px 5px rgb(254, 241, 194);
   letter-spacing: 6px;
   /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
@@ -34,7 +31,7 @@
   padding: 0.2em; */
 }
 
-.main_body{
+.main_body {
   display: flex;
   justify-content: space-between;
 }
@@ -67,7 +64,7 @@
   text-align: center;
   width: 265px;
   background-color: rgb(192, 169, 255);
-  padding:0.5em 0;
+  padding: 0.5em 0;
   border-radius: 10px;
   color: rgb(255, 255, 255);
   margin-top: 0.7em;
@@ -75,11 +72,9 @@
 }
 
 .btn:hover {
-  color:  rgb(192, 169, 255);
+  color: rgb(192, 169, 255);
   background: white;
   border: 1px solid rgb(192, 169, 255);
-
-
 }
 
 .newUser {
@@ -88,4 +83,8 @@
   color: rgb(157, 157, 157);
   gap: 1em;
   font-size: 0.85em;
+}
+
+.newUser a {
+  color: rgb(157, 157, 157);
 }
