--- a/client/src/components/auth/Register.module.css
+++ b/client/src/components/auth/Register.module.css
@@ -8,18 +8,23 @@
   backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   width: 40%;
+  position: inherit;
+
 }
 
 .heading {
-  padding-top: 1.9em;
   text-align: center;
   color: rgb(192, 169, 255);
+  padding-bottom: 1em;
+  font-size: 3em;
+  font-weight: 600
+
 }
 
 .flex_container {
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  gap: 1.5em;
 }
 
 .error {
@@ -27,10 +32,40 @@
 }
 
 .btn {
-  width: fit-content;
-  background-color: dodgerblue;
-  padding: 12px 16px;
-  border-radius: 16px;
+  text-align: center;
+  width: 265px;
+  background-color: rgb(192, 169, 255);
+  padding: 0.5em 0;
+  border-radius: 10px;
+  color: rgb(255, 255, 255);
+  margin-top: 0.7em;
+  cursor: pointer;
   align-self: center;
-  margin-top: 10px;
+}
+
+.btn:hover {
+  color: rgb(192, 169, 255);
+  background: white;
+  border: 1px solid rgb(192, 169, 255);
+}
+
+
+.textfield {
+  border: 0px solid red;
+  outline: none;
+  height: 2.2em;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(137, 100, 217, 0.204);
+  background-color: rgba(145, 119, 223, 0.154);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.textfield::placeholder {
+  color: rgb(166, 159, 182);
+  font-size: 1.2em;
+  padding-left: 0.7em;
+}
+
+.ptag{
+  padding-top: 10em;
 }
