--- a/client/src/components/news/NewsEntryList.module.css
+++ b/client/src/components/news/NewsEntryList.module.css
@@ -42,6 +42,7 @@
 .subSection {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: space-between;
   padding: 0.17em 0.23em 0.20em 0.18em;
 }
 
@@ -59,8 +60,9 @@
 .thumbnail {
   height: fit-content;
   border-radius: 7px;
-  max-width: 125px;
+  max-width: 230px;
   align-self: center;
+  flex: 1;
 }
 
 
