--- a/client/src/components/layout/About.module.css
+++ b/client/src/components/layout/About.module.css
@@ -1,8 +1,9 @@
 .header {
-  padding-top: 6%;
+  padding-top: 9%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 1.5%
 }
 
 .borderforheader {
