--- a/client/src/components/to-do-list/TodoList.module.css
+++ b/client/src/components/to-do-list/TodoList.module.css
@@ -20,8 +20,8 @@
   height: 290px;
   width: 290px;
   padding: 15px;
-  overflow: auto;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+  overflow-x: hidden;
 }
 
 .todos__col:hover {
